About me section fixes on mobile view

--- a/css/custom.css
+++ b/css/custom.css
@@ -110,7 +110,7 @@ p {
 }
 
 .centered-text-block {
-  font-size: 100%;
+  font-size: 90%;
   display: inline-block;
   text-align: center;
   margin-top: 10px;
@@ -179,6 +179,9 @@ p {
   font-size: 120%;
   padding-top: 10px;
   padding-bottom: 5px;
+}
+.list-header-about {
+  font-size: 150%;
 }
 
 @media(min-width: 350px) {
